Overflow fix.

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html, body {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 #root {
